unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/iCLightning__iContact_Configuration__c.object-meta.xml
<CustomObject>
    <description>Object that stores the iContact API Connection endpoint information</description>
    <label>iContact Configuration - Lightning</label>
    <nameField>
        <label>iContact Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iContact Configurations - Lightning</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>