unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/fields/iCLightning__Account_ID__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Account_ID__c</fullName>
    <description>The iContact ID for your iContact account. iContact will supply you with this value.</description>
    <inlineHelpText>The iContact ID for your iContact account. iContact will supply you with this value.</inlineHelpText>
    <label>Account ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>