unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/fields/iCLightning__API_AppID__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__API_AppID__c</fullName>
    <description>The iContact AppID for the given username. iContact will supply you with this value.</description>
    <inlineHelpText>The iContact AppID for the given username. iContact will supply you with this value.</inlineHelpText>
    <label>API AppID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>