unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/fields/iCLightning__API_Password__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__API_Password__c</fullName>
    <description>API Password for iContact</description>
    <label>API Password</label>
    <length>150</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>