unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/fields/iCLightning__Client_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Client_Folder_ID__c</fullName>
    <description>The iContact ID for the client folder you will be creating messages in. iContact will supply you with this value.</description>
    <inlineHelpText>The iContact ID for the client folder you will be creating messages in. iContact will supply you with this value.</inlineHelpText>
    <label>Client Folder ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>