unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/fields/iCLightning__Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Endpoint_URL__c</fullName>
    <defaultValue>"https://app.icontact.com/icp/"</defaultValue>
    <description>iContact will supply this value</description>
    <inlineHelpText>iContact will supply this value</inlineHelpText>
    <label>Endpoint URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>