unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/fields/iCLightning__Username__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__Username__c</fullName>
    <description>The username used to authenticate to the iContact API. iContact will supply you with this value.</description>
    <inlineHelpText>The username used to authenticate to the iContact API. iContact will supply you with this value.</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>