unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/fields/iCLightning__View_Spam_Score__c.field-meta.xml
<CustomField>
    <fullName>iCLightning__View_Spam_Score__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Spam Score</label>
    <type>Checkbox</type>
</CustomField>