unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/validationRules/iCLightning__Invalid_Account_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>iCLightning__Invalid_Account_ID</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER(iCLightning__Account_ID__c)) || CONTAINS(iCLightning__Account_ID__c, ".")</errorConditionFormula>
    <errorDisplayField>iCLightning__Account_ID__c</errorDisplayField>
    <errorMessage>Invalid Account ID</errorMessage>
</ValidationRule>