unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/validationRules/iCLightning__Invalid_Client_Folder_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>iCLightning__Invalid_Client_Folder_ID</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER(iCLightning__Client_Folder_ID__c)) || CONTAINS(iCLightning__Client_Folder_ID__c, ".")</errorConditionFormula>
    <errorDisplayField>iCLightning__Client_Folder_ID__c</errorDisplayField>
    <errorMessage>Invalid Client Folder ID</errorMessage>
</ValidationRule>