unpackaged/main/default/objects/iCLightning__iContact_Configuration__c/validationRules/iCLightning__Invalid_Endpoint_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>iCLightning__Invalid_Endpoint_URL</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(BEGINS(iCLightning__Endpoint_URL__c, 'https://') || BEGINS(iCLightning__Endpoint_URL__c, 'http://'))</errorConditionFormula>
    <errorDisplayField>iCLightning__Endpoint_URL__c</errorDisplayField>
    <errorMessage>Invalid Endpoint URL</errorMessage>
</ValidationRule>